k8s-iac-production/v3/networking.k8s.io.Ingress.v3-frontend-advertiser.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: 128m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: X-CSRF-Token, Access-Control-Allow-Headers,
      Origin,Accept, X-Requested-With, Content-Type, Access-Control-Request-Method,
      Authorization, Access-Control-Request-Headers
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE,
      PATH
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: v3-frontend-advertiser
  namespace: v3
spec:
  ingressClassName: ingress-nginx-public
  rules:
  - host: adv.afilio.com.br
    http:
      paths:
      - backend:
          service:
            name: v3-frontend-advertiser
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - adv.afilio.com.br
    secretName: wildcard-v2
